# vdRIF

./: .gitignore  .gitmodules  AGENTS.md  pyproject.toml
.beads/: issues.jsonl
configs/: cg_frame_defs.json  rifgen_smoke_rot12.flags
docs/: changelog.md  design_plan.md  irot_compression_plan.md  mtx_pocket_runtime_compare_20260225.md  plip_fill_sh4_benchmark_20260225.md  pocket_contact_plip_fill_full6_20260225.md  pocket_contact_plip_fill_smoke_20260225.md  pocket_contact_sweep_20260225.md  pocket_contact_top_budget_smoke_20260225.md  pocket_quality_plan_20260225.md  quickstart.md  rifgen_integration_notes.md  takeaway.md  vdxform_spec.md  vdxform_to_rif_spec.md
inputs/07_rifgen_smoke/: target_res.list
scripts/01_cgmap/: 01_run_mtx_cgmap.sh
scripts/02_polar_sites/: 01_extract_polar_sites.py  01_run_mtx_polar_sites.sh  02_check_polar_coverage_vs_cgmap.py  03_build_ligand_site_frames.py
scripts/03_vdxform/: 01_convert_parquet_to_vdxform_parts.py  01_run_coo_debug.sh  02_pack_vdxform_npz.py  02_run_mtx_needed_cgs.sh  03_run_mtx_needed_cgs_debug.sh
scripts/04_candidates/: 01_generate_candidates.py  01_run_mtx_candidates_debug.sh  02_run_mtx_candidates.sh
scripts/05_solver/: 01_run_mtx_solver_debug.sh  01_solve_motif.py  02_run_mtx_solver.sh  03_validate_motif_polar_satisfaction.py  04_validate_motif_clashes.py  05_validate_motif_internal_clashes.py  06_validate_motif_plip.py  07_plip_fill_motif.py
scripts/06_rif_export/: 01_export_rif_inputs.py
scripts/06_stats/: 01_run_mtx_vdm_db_stats.sh  01_vdm_db_stats.py
tests/: test_candidate_pocket_contact.py
(+33 files in other folders)
